add min.js and readme

--- a/demo.html
+++ b/demo.html
@@ -5,10 +5,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./css/index.css">
-  <script src="./js/lazyLoad.js"></script>
+  <script src="./dist/lazyLoad.min.js"></script>
   <script src="./js/index.js"></script>
-  <title>Document</title>
+  <style>
+    * {
+      padding: 0;
+      margin: 0;
+    }
+
+    .lazyload {
+      width: 500px;
+      height: 500px;
+      margin: 20px auto;
+      background-color: #1abc9c;
+    }
+
+    .lazyload img {
+      width: 100%;
+    }
+  </style>
+  <title>Lazyload Deom</title>
 </head>
 
 <body>
